# sheetdb

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  structure.txt  users.csv  users.xlsx
sheetdb/: __init__.py
sheetdb/backends/: __init__.py  csv.py  excel.py  gsheet.py  gsheet_async.py
sheetdb/examples/: demo_csv.py  demo_excel.py  demo_gsheet.py  demo_gsheet_async.py
sheetdb/interfaces/: __init__.py  model.py
src/: exceptions.py  logger_utils.py
src/backends/: csv.py  excel.py  gsheet.py  gsheet_async.py
src/examples/: config.py  demo_csv.py  demo_excel.py  demo_gsheet.py  demo_gsheet_async.py
src/interfaces/: base.py
